--- a/PBSS/users/templates/users/register.html
+++ b/PBSS/users/templates/users/register.html
@@ -1,44 +1,45 @@
 {%  extends "freefbaform/fbabase.html" %}
 {% block content %}
-        {% load static %}
-        {% load crispy_forms_tags %}
+{% load static %}
+{% load crispy_forms_tags %}
 
-     <div id="page-content" class="index-page">
-            <section id="" class="box-content box-1" style="background: white; margin-top: 3%;">
-                <div class="container">
-                    <div class="row heading">
-                        <div class="col-lg-12">
-                            <a href="{% url 'index' %}"><i class="fa fa-arrow-circle-left" style="font-size:40px; border: none; float: left; color: blue;"></i></a>
-                            <h2>Sign up</h2>
-                            <hr style="margin-left: 46%;">
-                            <div class="intro">Be a part of positive behaviour support.</div>
+<div id="page-content" class="index-page">
+    <section id="" class="box-content box-1" style="background: white; margin-top: 3%;">
+        <div class="container">
+            <div class="row heading">
+                <div class="col-lg-12">
+                    <a href="{% url 'index' %}"><i class="fa fa-arrow-circle-left"
+                                                   style="font-size:40px; border: none; float: left; color: blue;"></i></a>
+                    <h2>Sign up</h2>
+                    <hr style="margin-left: 46%;">
+                    <div class="intro">Be a part of positive behaviour support.</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 box-item">
+                    <img src="{% static 'images/password.png' %}" alt="checklist" class="password">
+                </div>
+                <div class="col-sm-6 box-item" style="text-align: left;">
+                    <form method="POST" style="">
+                        {% csrf_token %}
+                        <fieldset class="form-group">
+                            <legend class="border-bottom mb-4 "></legend>
+                            {{ form| crispy }}
+                        </fieldset>
+                        <div class="form-group">
+                            <button class="btn btn-3 btn-sm btn-block" type="submit"> Sign Up</button>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 box-item">
-                            <img src="{% static 'images/password.png' %}" alt="checklist" class="password">
-                        </div>
-                        <div class="col-sm-6 box-item" style="text-align: left;">
-                            <form method="POST" style="">
-                                 {% csrf_token %}
-                                 <fieldset class="form-group">
-                                     <legend class="border-bottom mb-4 "></legend>
-                                    {{ form| crispy }}
-                                 </fieldset>
-                                <div class="form-group">
-                                 <button class="btn btn-3 btn-sm btn-block" type="submit" > Sign Up </button>
-                                </div>
-                            </form>
-                             <div class="border-top pr-3">
+                    </form>
+                    <div class="border-top pr-3">
                         <small class="text-muted">
                             Already have an account? <a class="ml-2" href="{% url 'login' %}"> Sign In</a>
                         </small>
                     </div>
-                        </div>
-                    </div>
-
                 </div>
-            </section>
-     </div>
+            </div>
+
+        </div>
+    </section>
+</div>
 
 {% endblock content %}
