--- a/PBSS/businessleader/templates/businessleader/base.html
+++ b/PBSS/businessleader/templates/businessleader/base.html
@@ -1,58 +1,64 @@
 {%  extends "users/dashboardbase.html" %}
 {% block content %}
-        {% load static %}
-        {% load crispy_forms_tags %}
+{% load static %}
+{% load crispy_forms_tags %}
 
 <div class="page-content">
     <div class="container-fluid">
-       <h2 style="text-align: center;">Dashboard</h2>
+        <h2 style="text-align: center;">Dashboard</h2>
         <hr>
-      <div class="row">
-        <div class="form-group col-md-12">
-          <p style="text-align: center;">Manage work on daily basis.</p>
-        </div>
-      </div>
         <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-             <div class="container">
+            <div class="form-group col-md-12">
+                <p style="text-align: center;">Manage work on daily basis.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-<!--                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href=""> Add a new client</a></p>-->
                             <h4>Enter information</h4>
                         </div>
                     </div>
                     <div class="row">
-                    <div class="col-sm-6 box-item" style="text-align: left;">
-                    <p style="line-height: 3;">Enter details of your new support worker.</p>
-                        <div style="text-align: center; margin-top: 10%;">
-                        <img src="{% static 'images/checklist.png' %}" alt="checklist" class="checklist" >
+                        <div class="col-sm-6 box-item" style="text-align: left;">
+                            <p style="line-height: 3;">Enter details of your new support worker.</p>
+                            <div style="text-align: center; margin-top: 10%;">
+                                <img src="{% static 'images/checklist.png' %}" alt="checklist" class="checklist">
+                            </div>
                         </div>
-                   </div>
                         <div class="col-sm-6 box-item" style="text-align: left;">
                             <form method="POST" style="">
-                                 {% csrf_token %}
-                                 <fieldset class="form-group">
-                                     <legend class="border-bottom mb-4 "></legend>
+                                {% csrf_token %}
+                                <fieldset class="form-group">
+                                    <legend class="border-bottom mb-4 "></legend>
                                     {{ form| crispy }}
-                                 </fieldset>
+                                </fieldset>
                                 <div class="form-group">
-                                 <button class="btn btn-3 btn-sm btn-block" type="submit" href="{% url 'client' %}">Add Client</button>
+                                    <button class="btn btn-3 btn-sm btn-block" type="submit" href="{% url 'client' %}">
+                                        Add Client
+                                    </button>
                                 </div>
                             </form>
 
-        <div class="border-top pr-3">
+                            <div class="border-top pr-3">
 
-            </div></div></div>
+                            </div>
+                        </div>
+                    </div>
 
-
-        </div></div></div></div>
-  </main>
-    </div>
 
                 </div>
+            </div>
         </div>
-        </div>
-    </div></div></div>
-  </main>
+    </div>
+    </main>
+</div>
 
-                {% endblock content %}
+</div>
+</div>
+</div>
+</div></div></div>
+</main>
+
+{% endblock content %}
