--- a/PBSS/businessleader/templates/businessleader/dashboard.html
+++ b/PBSS/businessleader/templates/businessleader/dashboard.html
@@ -3,142 +3,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <!-- Required meta tags -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- semantic UI -->
-    <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css">
+    <link rel="stylesheet" type='text/css'
+          href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css">
     <!--Chart js-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" integrity="sha256-Uv9BNBucvCPipKQ2NS9wYpJmi8DTOEfTA/nH2aoJALw=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" integrity="sha256-aa0xaJgmK/X74WM224KMQeNQC2xYKwlAt08oZqjeF0E=" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
+            integrity="sha256-Uv9BNBucvCPipKQ2NS9wYpJmi8DTOEfTA/nH2aoJALw=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css"
+          integrity="sha256-aa0xaJgmK/X74WM224KMQeNQC2xYKwlAt08oZqjeF0E=" crossorigin="anonymous"/>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" type="text/css"
           href="{% static 'css/bootstrap.min.css' %}">
     <!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css"
+    <link rel="stylesheet" type="text/css"
           href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" type="text/css"
           href="{% static 'css/style.css' %}">
-	<link rel="stylesheet" type="text/css"
+    <link rel="stylesheet" type="text/css"
           href="{% static 'css/animated-logo.min.css' %}">
-	<link rel="stylesheet" type="text/css"
+    <link rel="stylesheet" type="text/css"
           href="{% static 'css/our-team.css' %}">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     {% if title %}
-        <title>Positive Behaviour - {{ title }}</title>
+    <title>Positive Behaviour - {{ title }}</title>
     {% else %}
-        <title>Positive Behaviour</title>
+    <title>Positive Behaviour</title>
     {% endif %}
 </head>
- <div class="page-wrapper chiller-theme toggled">
-  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-    <i class="fas fa-bars"></i>
-  </a>
-  <nav id="sidebar" class="sidebar-wrapper">
-    <div class="sidebar-content">
-      <div class="sidebar-brand">
-          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>
-      </div>
-        <div>
-                        {%  if messages %}
-                        {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }}" style="text-align: center">
-                        {{ message }}
-                        </div>
-                        {% endfor %}
-                        {%  endif %}
-                        </div>
-      <div class="sidebar-header">
-        <div class="user-pic">
-          <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}"
-            alt="User picture">
+<div class="page-wrapper chiller-theme toggled">
+    <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+        <i class="fas fa-bars"></i>
+    </a>
+    <nav id="sidebar" class="sidebar-wrapper">
+        <div class="sidebar-content">
+            <div class="sidebar-brand">
+                <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>
+            </div>
+            <div>
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}" style="text-align: center">
+                    {{ message }}
+                </div>
+                {% endfor %}
+                {% endif %}
+            </div>
+            <div class="sidebar-header">
+                <div class="user-pic">
+                    <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}"
+                         alt="User picture">
+                </div>
+
+
+                <div class="user-info">
+                    <span class="user-name" style="margin-top: 6%; margin-bottom: 6%;">Hello, {{ user.username }}</span>
+                    <span class="user-name" style="margin-top: 6%;">Mail ID:</span> <span class="user-name"
+                                                                                          style="margin-top: 6%;">{{ user.email }}</span>
+                </div>
+            </div>
+
+            <!-- I am merging, it i do something wrong please let me know we will revert back. -->
+            <!-- sidebar-search  -->
+            <div class="sidebar-menu">
+                <ul>
+                    <li class="header-menu">
+                        <span style="font-size: 24px; margin-top: 4%; margin-bottom: 4%;">General</span>
+                    </li>
+                    <li class="sidebar-dropdown">
+                        <a href="{% url 'businessleader' %}">
+                            <span>Add Support Worker</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-dropdown">
+                        <a href="{% url 'BL_view' %}">
+                            <span>Client List</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-dropdown">
+                        <a href="{% url 'supportworker' %}">
+                            <span>Support Workers</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-dropdown">
+                        <a href="{% url 'logout' %}">
+                            <span>Logout</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- sidebar-menu  -->
         </div>
 
+    </nav>
+    {% block scripts %}
+    {% endblock scripts %}
 
 
-        <div class="user-info">
-          <span class="user-name" style="margin-top: 6%; margin-bottom: 6%;">Hello, {{ user.username }}</span>
-            <span class="user-name" style="margin-top: 6%;">Mail ID:</span>  <span class="user-name" style="margin-top: 6%;">{{ user.email }}</span>
-        </div>
-      </div>
-
-    <!-- I am merging, it i do something wrong please let me know we will revert back. -->
-      <!-- sidebar-search  -->
-      <div class="sidebar-menu">
-        <ul>
-          <li class="header-menu">
-            <span style="font-size: 24px; margin-top: 4%; margin-bottom: 4%;">General</span>
-          </li>
-             <li class="sidebar-dropdown">
-           <a href="{% url 'businessleader' %}">
-              <span>Add Support Worker</span>
-            </a>
-          </li>
-            <li class="sidebar-dropdown">
-           <a href="{% url 'BL_view' %}">
-              <span>Client List</span>
-            </a>
-          </li>
-             <li class="sidebar-dropdown">
-           <a href="{% url 'supportworker' %}">
-              <span>Support Workers</span>
-            </a>
-          </li>
-            <li class="sidebar-dropdown">
-            <a href="{% url 'logout' %}" >
-              <span>Logout</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <!-- sidebar-menu  -->
-    </div>
-
-  </nav>
-     {% block scripts %}
-  {% endblock scripts %}
-
-
-<body>
+    <body>
 
     {% block content %}{% endblock content %}
 
 
-                </div>
-                </fieldset></form>
-                </div>
-                        </div>
-					</div>
+</div>
+</fieldset></form>
+</div>
+</div>
+</div>
 
 <!-- Js -->
-	    <script src= "{% static 'js/modernizr.js' %}"></script>
-        <script src= "{% static 'js/html5shiv.js' %}"></script>
-        <script src= "{% static 'js/respond.min.js' %}"></script>
-    <![endif]-->
+<script src="{% static 'js/modernizr.js' %}"></script>
+<script src="{% static 'js/html5shiv.js' %}"></script>
+<script src="{% static 'js/respond.min.js' %}"></script>
+<![endif]-->
 <!-- jQuery -->
-	<script src="{% static 'js/jquery-2.1.1.js' %}"></script>
-	<script src="{% static 'js/masonry.pkgd.min.js' %}"></script>
-	<script src="{% static 'js/jquery.flexslider-min.js' %}"></script>
-	<script src="{% static 'js/main.js' %}"></script> <!-- Resource jQuery -->
+<script src="{% static 'js/jquery-2.1.1.js' %}"></script>
+<script src="{% static 'js/masonry.pkgd.min.js' %}"></script>
+<script src="{% static 'js/jquery.flexslider-min.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script> <!-- Resource jQuery -->
 
-	<!-- Bootstrap Core JavaScript -->
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-	<!-- Custom Theme JavaScript -->
-	<script src="{% static 'js/agency.js'%}"></script>
+<!-- Custom Theme JavaScript -->
+<script src="{% static 'js/agency.js'%}"></script>
 
-	<!-- Animated Top -->
-	<script src="{% static 'js/jquery.easing.min.js'%}"></script>
-	<script src="{% static 'js/classie.js'%}"></script>
-	<script src="{% static 'js/cbpAnimatedHeader.js'%}"></script>
-	<!-- Footer -->
+<!-- Animated Top -->
+<script src="{% static 'js/jquery.easing.min.js'%}"></script>
+<script src="{% static 'js/classie.js'%}"></script>
+<script src="{% static 'js/cbpAnimatedHeader.js'%}"></script>
+<!-- Footer -->
 
 </body>
 </html>
