--- a/PBSS/businessleader/templates/businessleader/swlist.html
+++ b/PBSS/businessleader/templates/businessleader/swlist.html
@@ -3,69 +3,74 @@
 {% block content %}
 {% load static %}
 
-  <main class="page-content">
+<main class="page-content">
     <div class="container-fluid">
-       <h2 style="text-align: center;">Dashboard</h2>
+        <h2 style="text-align: center;">Dashboard</h2>
         <hr>
-      <div class="row">
-        <div class="form-group col-md-12">
-          <p style="text-align: center;">Manage work on daily basis.</p>
+        <div class="row">
+            <div class="form-group col-md-12">
+                <p style="text-align: center;">Manage work on daily basis.</p>
+            </div>
         </div>
-      </div>
-         <div class="container">
-                    <div class="row heading">
-                         <div class="row heading">
-                        <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"
-                                                                                            href="{% url 'businessleader' %}" style="float: right; margin-right: 4%;">
-                            <span>Add New Support Worker</span></a>
-                  <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+        <div class="container">
+            <div class="row heading">
+                <div class="row heading">
+                    <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg"
+                                                                                   type="submit"
+                                                                                   href="{% url 'businessleader' %}"
+                                                                                   style="float: right; margin-right: 4%;">
+                        <span>Add New Support Worker</span></a>
+                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
 
-                          <!--  <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p> -->
                             <h2 style="text-align: center;">Support Workers List</h2>
 
-                    <br><br>
-            <div class="container">
-               {% for User in users %}
-                <div class="container" style="-webkit-box-shadow: 0 10px 6px -6px #777;-moz-box-shadow: 0 10px 6px -6px #777;
+                            <br><br>
+                            <div class="container">
+                                {% for User in users %}
+                                <div class="container" style="-webkit-box-shadow: 0 10px 6px -6px #777;-moz-box-shadow: 0 10px 6px -6px #777;
             box-shadow: 0 10px 6px -6px #777; margin-bottom: 3%; width: 48%; float: left;">
-                <h2><a class="article-title" >{{ User.username }}</a> </h2>
-                             <a class="mr-2"  style="line-height: 2;">{{User.email }}</a>
-                            <br>
-                    <form action="{% %}/PostDeleteViewBl/{{user.id}}/"
-                          style="display: inline;"
-                          method="post">{% csrf_token %}
-                        <input type="submit" class="btn btn-2 btn-lg" value="Delete"/></form> </div>
-                    <br>
-                    </div>
+                                    <h2><a class="article-title">{{ User.username }}</a></h2>
+                                    <a class="mr-2" style="line-height: 2;">{{User.email }}</a>
+                                    <br>
+                                    <form action="{% %}/PostDeleteViewBl/{{user.id}}/"
+                                          style="display: inline;"
+                                          method="post">{% csrf_token %}
+                                        <input type="submit" class="btn btn-2 btn-lg" value="Delete"/></form>
+                                </div>
+                                <br>
+                            </div>
 
 
+                            {% endfor %}
+                            <br><br>
+                            {% if is_paginated %}
+                            {% if page_obj.has_previous %}
+                            <a type="button" class="btn btn-info" href="?page=1">First</a>
+                            <a type="button" class="btn btn-info" href="?page={{ page_obj.previous_page_number}}">Previous</a>
+                            {% endif %}
+                            {% for num in page_obj.paginator.page_range %}
+                            {% if page_obj.number == num %}
+                            <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
+                            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                            <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
+                            {% endif %}
+                            {% endfor %}
 
-               {% endfor %}
- <br><br>
-                {% if is_paginated %}
-                    {% if page_obj.has_previous %}
-                    <a type="button" class="btn btn-info" href="?page=1">First</a>
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.previous_page_number}}">Previous</a>
-                    {% endif %}
-                    {% for num in page_obj.paginator.page_range %}
-                        {% if page_obj.number == num %}
-                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
-                        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
-                        {% endif %}
-                 {% endfor %}
-
-                 {% if page_obj.has_next %}
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.next_page_number }}">Next</a>
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.paginator.num_pages}}">Last</a>
-                 {% endif %}
-                {% endif %}
+                            {% if page_obj.has_next %}
+                            <a type="button" class="btn btn-info" href="?page={{ page_obj.next_page_number }}">Next</a>
+                            <a type="button" class="btn btn-info"
+                               href="?page={{ page_obj.paginator.num_pages}}">Last</a>
+                            {% endif %}
+                            {% endif %}
 
                         </div>
+                    </div>
+                    </section>
                 </div>
-            </section>
-     </div>
-                         </div></div></div></div></main>
+            </div>
+        </div>
+    </div>
+    </div></main>
 
 
 {% endblock content %}
