--- a/PBSS/businessleader/templates/businessleader/user_detail.html
+++ b/PBSS/businessleader/templates/businessleader/user_detail.html
@@ -3,59 +3,59 @@
 {% block content %}
 {% load static %}
 
-  <main class="page-content">
+<main class="page-content">
     <div class="container-fluid">
-       <h2 style="text-align: center;">Dashboard</h2>
+        <h2 style="text-align: center;">Dashboard</h2>
         <hr>
-      <div class="row">
-        <div class="form-group col-md-12">
-          <p style="text-align: center;">Manage work on daily basis.</p>
+        <div class="row">
+            <div class="form-group col-md-12">
+                <p style="text-align: center;">Manage work on daily basis.</p>
+            </div>
         </div>
-      </div>
-         <div class="container">
-                    <div class="row heading">
-                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                          <!--  <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p> -->
-                            <h2 style="text-align: center;">Support Workers Detail</h2>
-                    <br><br>
         <div class="container">
+            <div class="row heading">
+                <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+                    <h2 style="text-align: center;">Support Workers Detail</h2>
+                    <br><br>
+                    <div class="container">
 
-                <div class="container" style="-webkit-box-shadow: 0 10px 6px -6px #777;-moz-box-shadow: 0 10px 6px -6px #777;
+                        <div class="container" style="-webkit-box-shadow: 0 10px 6px -6px #777;-moz-box-shadow: 0 10px 6px -6px #777;
             box-shadow: 0 10px 6px -6px #777; margin-bottom: 3%; width: 48%; float: left;">
-                <h2><a class="article-title" style="color: black; font-size: 30px;">{{ object.username }}</a> </h2>
-                             <a class="mr-2"  style="line-height: 2;">{{object.email }}</a>
-                            <div class="intro" style="float: right;"> on {{ object.date_issued }}</div><br><br>
+                            <h2><a class="article-title" style="color: black; font-size: 30px;">{{ object.username
+                                }}</a></h2>
+                            <a class="mr-2" style="line-height: 2;">{{object.email }}</a>
+                            <div class="intro" style="float: right;"> on {{ object.date_issued }}</div>
+                            <br><br>
                             <div class="intro" style="line-height: 2;">Gender: {{object.gender}}</div>
                             <div class="intro" style="line-height: 2;">Date Of Birth: {{object.DOB}}</div>
                             <div class="intro" style="line-height: 2;">Email-id: {{object.email}}</div>
                             <div class="intro" style="line-height: 2;">Location: {{object.location}}</div>
                             <br>
+                        </div>
+
+
+                    </div>
+                    <br><br>
                 </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 
-
-        </div>
-                <br><br>
-        </div>
-        <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-
-        </div>
-        </div>
+                    </div>
+                </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 
                 </div>
-        </div>
+            </div>
             <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-
-          </div>
-        </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-        </div>
-      </div>
-  </main>
-    </div>
 
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            </div>
+        </div>
+</main>
+</div>
 
 
 {% endblock content %}
