--- a/PBSS/contact/templates/contact.html
+++ b/PBSS/contact/templates/contact.html
@@ -1,62 +1,65 @@
-
 {%  extends "freefbaform/fbabase.html" %}
 {% block content %}
-        {% load static %}
+{% load static %}
 
-          <section class="box-content box-5" id="contact" style="background:white;" >
-                <div class="container">
-                    <div class="row heading">
-                        <div class="col-lg-12">
-                            <a href="{% url 'index' %}"><i class="fa fa-arrow-circle-left" style="font-size:40px; border: none; float: left; color: blue;"></i></a>
+<section class="box-content box-5" id="contact" style="background:white;">
+    <div class="container">
+        <div class="row heading">
+            <div class="col-lg-12">
+                <a href="{% url 'index' %}"><i class="fa fa-arrow-circle-left"
+                                               style="font-size:40px; border: none; float: left; color: blue;"></i></a>
 
-                            <h2>Contact us</h2>
-                            <hr>
-                            <div class="intro">The support team is here to help, drop us a line.</div>
-                        </div>
-                    </div>
-                       <div>
-                        {%  if messages %}
-                            {% for message in messages %}
-                               <div class="alert alert-{{ message.tags }}" style="font-size: 25px; text-align: center;">
-                                {{ message }}
-                               </div>
-                            {% endfor %}
-                        {%  endif %}
-                     </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="row box-item">
-                                <h3>How can we help?</h3>
-                                <p style="line-height: 2;">Please select a topic that you are not able to find according to your need. click the contact form and complete the required information we will get back to you as soon as possible.</p>
-                                <h3>Drop us a message at:</h3>
-                                <p>info@positivebehaviourPBS.com</p>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="contact-form">
-                                <form name="form1" method="post">
-                                    <div class="row">
-
-                                        <div class="col-md-6">
-
-                                            <div class="form-group">
-                                                <fieldset class="form-group">
-                                                {% csrf_token %}
-                                                {{form.as_p}}
-                                                </fieldset>
-                                            </div>
-                                        </div>
-                                            <button type="submit" class="btn btn-3 btn-block" name="btnContactUs" id="btnContactUs">
-                                        Submit</button>
-                                        </div>
-
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+                <h2>Contact us</h2>
+                <hr>
+                <div class="intro">The support team is here to help, drop us a line.</div>
+            </div>
+        </div>
+        <div>
+            {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}" style="font-size: 25px; text-align: center;">
+                {{ message }}
+            </div>
+            {% endfor %}
+            {% endif %}
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="row box-item">
+                    <h3>How can we help?</h3>
+                    <p style="line-height: 2;">Please select a topic that you are not able to find according to your
+                        need. click the contact form and complete the required information we will get back to you as
+                        soon as possible.</p>
+                    <h3>Drop us a message at:</h3>
+                    <p>info@positivebehaviourPBS.com</p>
                 </div>
-            </section>
+            </div>
+            <div class="col-md-8">
+                <div class="contact-form">
+                    <form name="form1" method="post">
+                        <div class="row">
+
+                            <div class="col-md-6">
+
+                                <div class="form-group">
+                                    <fieldset class="form-group">
+                                        {% csrf_token %}
+                                        {{form.as_p}}
+                                    </fieldset>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-3 btn-block" name="btnContactUs" id="btnContactUs">
+                                Submit
+                            </button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
+</section>
+</div>
 
 
 {% endblock content %}
