--- a/PBSS/fbaform/templates/fbaform/fbabase.html
+++ b/PBSS/fbaform/templates/fbaform/fbabase.html
@@ -2,153 +2,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" type="text/css"
           href="{% static 'css/bootstrap.min.css' %}">
     <!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css"
+    <link rel="stylesheet" type="text/css"
           href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" type="text/css"
           href="{% static 'css/style.css' %}">
-	<link rel="stylesheet" type="text/css"
+    <link rel="stylesheet" type="text/css"
           href="{% static 'css/animated-logo.min.css' %}">
-	<link rel="stylesheet" type="text/css"
+    <link rel="stylesheet" type="text/css"
           href="{% static 'css/our-team.css' %}">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
     {% if title %}
-        <title>Positive Behaviour - {{ title }}</title>
+    <title>Positive Behaviour - {{ title }}</title>
     {% else %}
-        <title>Positive Behaviour</title>
+    <title>Positive Behaviour</title>
     {% endif %}
 </head>
 
 <body>
-	<!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-				<a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-            </div>
-            <!-- /.navbar-collapse -->
+<!-- Navigation -->
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
         </div>
-        <!-- /.container-fluid -->
-    </nav>
-	<!-- Navigation -->
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+<!-- Navigation -->
 
 
-    {% block content %}{% endblock content %}
+{% block content %}{% endblock content %}
 
 
-    <!-- Footer -->
-	<footer>
-		<div class="wrap-footer">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-4 col-footer footer-1">
-						<div class=""><h6>PBSS</h6></div>
-						<div class="content">
-							<p>A PBS plan will tell the people what needs to be done proactively to prevent the challenging behaviour. Proactive strategy will improve the quality of life by supporting throughout the process. Our web application will aid all the people who want to proactively prevent a challenging behaviour by submitting a Functional Behaviour Assessment (FBA) form which will be analysed by the team leader and strategies will be developed to counter the behaviour. </p>
+<!-- Footer -->
+<footer>
+    <div class="wrap-footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 col-footer footer-1">
+                    <div class=""><h6>PBSS</h6></div>
+                    <div class="content">
+                        <p>A PBS plan will tell the people what needs to be done proactively to prevent the challenging
+                            behaviour. Proactive strategy will improve the quality of life by supporting throughout the
+                            process. Our web application will aid all the people who want to proactively prevent a
+                            challenging behaviour by submitting a Functional Behaviour Assessment (FBA) form which will
+                            be analysed by the team leader and strategies will be developed to counter the
+                            behaviour. </p>
+                    </div>
+                </div>
+
+
+                <div class="col-xs-6 col-md-4 col-footer footer-3">
+                    <h6>Quick Links</h6>
+                    <ul class="footer-links">
+                        <li><a href="{% url 'index' %}">Home</a></li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="{% url 'register' %}">Signin/Signup</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="{% url 'freefbaform' %}">FBA Form</a></li>
+                        <li><a href="#">Contact us</a></li>
+                    </ul>
+                </div>
+
+
+                <div class="col-md-4 col-footer footer-2">
+                    <div class=""><h6>Subscribe us</h6></div>
+                    <div class="content">
+                        <p></p>
+                        <div class="subscribe-form">
+                            <form method="get" action="/search" id="subscribe">
+                                <div class="form-group">
+                                    <input type="text" class="form-control input-lg" name="subscribe"
+                                           placeholder="Enter your email address...  " required="required"/>
+                                </div>
+                                <button type="submit" name="Submit" class="btn btn-4 btn-block">Subscribe</button>
+                            </form>
                         </div>
-					</div>
-
-
-						<div class="col-xs-6 col-md-4 col-footer footer-3">
-                            <h6>Quick Links</h6>
-                                <ul class="footer-links">
-                                      <li><a href="{% url 'index' %}">Home</a></li>
-                                      <li><a href="#">About us</a></li>
-                                      <li><a href="{% url 'register' %}">Signin/Signup</a></li>
-                                      <li><a href="#">Services</a></li>
-                                      <li><a href="{% url 'freefbaform' %}">FBA Form</a></li>
-                                      <li><a href="#">Contact us</a></li>
-                                </ul>
-                        </div>
-
-
-                    <div class="col-md-4 col-footer footer-2">
-						<div class=""><h6>Subscribe us</h6></div>
-						<div class="content">
-							<p> </p>
-							<div class="subscribe-form" >
-								<form method="get" action="/search" id="subscribe">
-									<div class="form-group">
-										<input type="text" class="form-control input-lg" name="subscribe" placeholder="Enter your email address...  " required="required" />
-									</div>
-									<button type="submit" name="Submit" class="btn btn-4 btn-block">Subscribe</button>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="copyright">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-4">
-						<p>Copyright &copy; PBSS - Designed by Team 03<a href="#"></a></p>
-					</div>
-					<div class="col-md-4">
-						<ul class="list-inline">
-							<li><a href="#"><i class="fa fa-twitter"></i></a>
-							</li>
-							<li><a href="#"><i class="fa fa-facebook"></i></a>
-							</li>
-							<li><a href="#"><i class="fa fa-linkedin"></i></a>
-							</li>
-							<li><a href="#"><i class="fa fa-google"></i></a>
-                            </li>
-						</ul>
-					</div>
-					<div class="col-md-4">
-						<ul class="list-inline">
-							•<li><a href="#">Privacy Policy</a>
-							</li>
-							•<li><a href="#">Terms of Use</a>
-							</li>
-                            •<li><a href="#">Sitemap</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- Footer -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4">
+                    <p>Copyright &copy; PBSS - Designed by Team 03<a href="#"></a></p>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline">
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-google"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline">
+                        •
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        •
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                        •
+                        <li><a href="#">Sitemap</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- Footer -->
 <!-- Js -->
-	    <script src= "{% static 'js/modernizr.js' %}"></script>
-        <script src= "{% static 'js/html5shiv.js' %}"></script>
-        <script src= "{% static 'js/respond.min.js' %}"></script>
-    <![endif]-->
+<script src="{% static 'js/modernizr.js' %}"></script>
+<script src="{% static 'js/html5shiv.js' %}"></script>
+<script src="{% static 'js/respond.min.js' %}"></script>
+<![endif]-->
 <!-- jQuery -->
-	<script src="{% static 'js/jquery-2.1.1.js' %}"></script>
-	<script src="{% static 'js/masonry.pkgd.min.js' %}"></script>
-	<script src="{% static 'js/jquery.flexslider-min.js' %}"></script>
-	<script src="{% static 'js/main.js' %}"></script> <!-- Resource jQuery -->
+<script src="{% static 'js/jquery-2.1.1.js' %}"></script>
+<script src="{% static 'js/masonry.pkgd.min.js' %}"></script>
+<script src="{% static 'js/jquery.flexslider-min.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script> <!-- Resource jQuery -->
 
-	<!-- Bootstrap Core JavaScript -->
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-	<!-- Custom Theme JavaScript -->
-	<script src="{% static 'js/agency.js'%}"></script>
+<!-- Custom Theme JavaScript -->
+<script src="{% static 'js/agency.js'%}"></script>
 
-	<!-- Animated Top -->
-	<script src="{% static 'js/jquery.easing.min.js'%}"></script>
-	<script src="{% static 'js/classie.js'%}"></script>
-	<script src="{% static 'js/cbpAnimatedHeader.js'%}"></script>
-	<!-- Footer -->
+<!-- Animated Top -->
+<script src="{% static 'js/jquery.easing.min.js'%}"></script>
+<script src="{% static 'js/classie.js'%}"></script>
+<script src="{% static 'js/cbpAnimatedHeader.js'%}"></script>
+<!-- Footer -->
 
 </body>
 </html>
