--- a/PBSS/form_fba/templates/charts.html
+++ b/PBSS/form_fba/templates/charts.html
@@ -1,192 +1,228 @@
 {%  extends "users/dashboardbase.html" %}
 
 
+{% block scripts %}
 
-  {% block scripts %}
-
-     <div class="page-content">
+<div class="page-content">
     <div class="container-fluid">
-       <h2 style="text-align: center;">Dashboard</h2>
+        <h2 style="text-align: center;">Dashboard</h2>
         <hr>
-      <div class="row">
-        <div class="form-group col-md-12">
-          <p style="text-align: center;">Manage work on daily basis.</p>
-        </div>
-      </div>
         <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-             <div class="container">
+            <div class="form-group col-md-12">
+                <p style="text-align: center;">Manage work on daily basis.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Data Evaluation </a></p>
+                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Data
+                                Evaluation </a></p>
                         </div>
                     </div>
                     <div class="row">
 
-  <script>
-  $(document).ready(function(){
+                        <script>
+                            $(document).ready(function () {
 
-    var ctx = document.getElementById('myChart').getContext('2d');
-    var myChart = new Chart(ctx, {
-    type: 'doughnut',
-    data: {
-        labels: [{% for item in qs %}'{{item.user}}',{% endfor %}],
-        datasets: [{
-            label: '# of Votes',
-            data: [{% for item in qs %}'{{item.intensity}}',{% endfor %}],
+                                var ctx = document.getElementById('myChart').getContext('2d');
+                                var myChart = new Chart(ctx, {
+                                    type: 'doughnut',
+                                    data: {
+                                        labels: [{ % for item in qs %
+                                    }'{{item.user}}',
+                                {%
+                                    endfor %
+                                }
+                            ],
+                                datasets: [{
+                                    label: '# of Votes',
+                                    data: [{ % for item in qs %
+                                }'{{item.intensity}}', { % endfor %
+                            }],
 
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)',
-                'rgba(153, 10, 455, 0.2)',
-                'rgba(23, 502, 255, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)',
-                'rgba(200, 12, 155, 1)',
-                'rgba(55, 459, 44, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-            ],
-            borderWidth: 3
-        }]
-    },
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero: true
-                }
-            }]
-        }
-    }
-});
-  });
+                                backgroundColor: [
+                                    'rgba(255, 99, 132, 0.2)',
+                                    'rgba(54, 162, 235, 0.2)',
+                                    'rgba(255, 206, 86, 0.2)',
+                                    'rgba(75, 192, 192, 0.2)',
+                                    'rgba(153, 102, 255, 0.2)',
+                                    'rgba(255, 159, 64, 0.2)',
+                                    'rgba(153, 10, 455, 0.2)',
+                                    'rgba(23, 502, 255, 0.2)',
+                                    'rgba(54, 162, 235, 0.2)',
+                                    'rgba(255, 206, 86, 0.2)',
+                                ],
+                                    borderColor
+                            :
+                                [
+                                    'rgba(255, 99, 132, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                    'rgba(75, 192, 192, 1)',
+                                    'rgba(153, 102, 255, 1)',
+                                    'rgba(255, 159, 64, 1)',
+                                    'rgba(200, 12, 155, 1)',
+                                    'rgba(55, 459, 44, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                ],
+                                    borderWidth
+                            :
+                                3
+                            }]
+                            },
+                                options: {
+                                    scales: {
+                                        yAxes: [{
+                                            ticks: {
+                                                beginAtZero: true
+                                            }
+                                        }]
+                                    }
+                                }
+                            })
+                                ;
+                            });
 
 
-  $(document).ready(function(){
+                            $(document).ready(function () {
 
-    var ctx = document.getElementById('myChart2').getContext('2d');
-    var myChart2 = new Chart(ctx, {
-    type: 'bar',
-    data: {
-        labels: [{% for item in qs %}'{{item.user}}',{% endfor %}],
-        datasets: [{
-            label: '# of Votes',
-            data: [{% for item in qs %}'{{item.intensity}}',{% endfor %}],
+                                var ctx = document.getElementById('myChart2').getContext('2d');
+                                var myChart2 = new Chart(ctx, {
+                                    type: 'bar',
+                                    data: {
+                                        labels: [{ % for item in qs %
+                                    }'{{item.user}}',
+                                {%
+                                    endfor %
+                                }
+                            ],
+                                datasets: [{
+                                    label: '# of Votes',
+                                    data: [{ % for item in qs %
+                                }'{{item.intensity}}', { % endfor %
+                            }],
 
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)',
-                'rgba(153, 10, 455, 0.2)',
-                'rgba(23, 502, 255, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)',
-                'rgba(200, 12, 155, 1)',
-                'rgba(55, 459, 44, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-            ],
-            borderWidth: 3
-        }]
-    },
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero: true
-                }
-            }]
-        }
-    }
-});
-  });
+                                backgroundColor: [
+                                    'rgba(255, 99, 132, 0.2)',
+                                    'rgba(54, 162, 235, 0.2)',
+                                    'rgba(255, 206, 86, 0.2)',
+                                    'rgba(75, 192, 192, 0.2)',
+                                    'rgba(153, 102, 255, 0.2)',
+                                    'rgba(255, 159, 64, 0.2)',
+                                    'rgba(153, 10, 455, 0.2)',
+                                    'rgba(23, 502, 255, 0.2)',
+                                    'rgba(54, 162, 235, 0.2)',
+                                    'rgba(255, 206, 86, 0.2)',
+                                ],
+                                    borderColor
+                            :
+                                [
+                                    'rgba(255, 99, 132, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                    'rgba(75, 192, 192, 1)',
+                                    'rgba(153, 102, 255, 1)',
+                                    'rgba(255, 159, 64, 1)',
+                                    'rgba(200, 12, 155, 1)',
+                                    'rgba(55, 459, 44, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                ],
+                                    borderWidth
+                            :
+                                3
+                            }]
+                            },
+                                options: {
+                                    scales: {
+                                        yAxes: [{
+                                            ticks: {
+                                                beginAtZero: true
+                                            }
+                                        }]
+                                    }
+                                }
+                            })
+                                ;
+                            });
 
-  $(document).ready(function(){
+                            $(document).ready(function () {
 
-    var ctx = document.getElementById('myChart3').getContext('2d');
-    var myChart3 = new Chart(ctx, {
-    type: 'pie',
-    data: {
-        labels: [{% for item in qs %}'{{item.user}}',{% endfor %}],
-        datasets: [{
-            label: '# of Votes',
-            data: [{% for item in qs %}'{{item.intensity}}',{% endfor %}],
+                                var ctx = document.getElementById('myChart3').getContext('2d');
+                                var myChart3 = new Chart(ctx, {
+                                    type: 'pie',
+                                    data: {
+                                        labels: [{ % for item in qs %
+                                    }'{{item.user}}',
+                                {%
+                                    endfor %
+                                }
+                            ],
+                                datasets: [{
+                                    label: '# of Votes',
+                                    data: [{ % for item in qs %
+                                }'{{item.intensity}}', { % endfor %
+                            }],
 
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)',
-                'rgba(153, 10, 455, 0.2)',
-                'rgba(23, 502, 255, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)',
-                'rgba(200, 12, 155, 1)',
-                'rgba(55, 459, 44, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-            ],
-            borderWidth: 3
-        }]
-    },
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero: true
-                }
-            }]
-        }
-    }
-});
-  });
+                                backgroundColor: [
+                                    'rgba(255, 99, 132, 0.2)',
+                                    'rgba(54, 162, 235, 0.2)',
+                                    'rgba(255, 206, 86, 0.2)',
+                                    'rgba(75, 192, 192, 0.2)',
+                                    'rgba(153, 102, 255, 0.2)',
+                                    'rgba(255, 159, 64, 0.2)',
+                                    'rgba(153, 10, 455, 0.2)',
+                                    'rgba(23, 502, 255, 0.2)',
+                                    'rgba(54, 162, 235, 0.2)',
+                                    'rgba(255, 206, 86, 0.2)',
+                                ],
+                                    borderColor
+                            :
+                                [
+                                    'rgba(255, 99, 132, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                    'rgba(75, 192, 192, 1)',
+                                    'rgba(153, 102, 255, 1)',
+                                    'rgba(255, 159, 64, 1)',
+                                    'rgba(200, 12, 155, 1)',
+                                    'rgba(55, 459, 44, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                ],
+                                    borderWidth
+                            :
+                                3
+                            }]
+                            },
+                                options: {
+                                    scales: {
+                                        yAxes: [{
+                                            ticks: {
+                                                beginAtZero: true
+                                            }
+                                        }]
+                                    }
+                                }
+                            })
+                                ;
+                            });
 
-  </script>
-  {% endblock scripts %}
+                        </script>
+                        {% endblock scripts %}
 
-  {%block content%}
-    <canvas id="myChart"  width="800" height="100"></canvas>
-    <canvas id="myChart2"  width="800" height="100"></canvas>
-    <canvas id="myChart3"  width="800" height="100"></canvas>
+                        {%block content%}
+                        <canvas id="myChart" width="800" height="100"></canvas>
+                        <canvas id="myChart2" width="800" height="100"></canvas>
+                        <canvas id="myChart3" width="800" height="100"></canvas>
 
                     </div>
-             </div>
-        </div>
+                </div>
+            </div>
         </div>
     </div>
-     </div>
-  {%endblock content %}
+</div>
+{%endblock content %}
