--- a/PBSS/form_fba/templates/fbaindex.html
+++ b/PBSS/form_fba/templates/fbaindex.html
@@ -5,69 +5,75 @@
 
 
 {% if user.is_authenticated %}
-  <main class="page-content">
+<main class="page-content">
     <div class="container-fluid">
-       <h2 style="text-align: center;">Dashboard</h2>
+        <h2 style="text-align: center;">Dashboard</h2>
         <hr>
-      <div class="row">
-        <div class="form-group col-md-12">
-          <p style="text-align: center;">Manage work on daily basis.</p>
+        <div class="row">
+            <div class="form-group col-md-12">
+                <p style="text-align: center;">Manage work on daily basis.</p>
+            </div>
         </div>
-      </div>
 
-                   <div class="row heading">
-                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour Assessment</a></p>
-                            <h4>Functional Behaviour Assessment</h4>
-                        </div>
-                    </div>
+        <div class="row heading">
+            <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour
+                    Assessment</a></p>
+                <h4>Functional Behaviour Assessment</h4>
+            </div>
+        </div>
 
-               <form method="POST" class="post-form" action="/std/">
-    {% csrf_token %}
+        <form method="POST" class="post-form" action="/std/">
+            {% csrf_token %}
 
 
-        <br>
+            <br>
 
-        <div class="form-group row">
+            <div class="form-group row">
                 <div class="col-sm-12">
-        <p style="margin-bottom: 2%;">Hello {{ user.username }}, Please Enter your details in FBA form. Client name is {{ form.client_name }} </p>
+                    <p style="margin-bottom: 2%;">Hello {{ user.username }}, Please Enter your details in FBA form.
+                        Client name is {{ form.client_name }} </p>
                 </div>
-        </div>
+            </div>
 
-    <div class="form-group row">
+            <div class="form-group row">
 
-        <label class="col-sm-2 col-form-label"> Client </label>
-        <div class="col-sm-4">{{ form.client }} </div>
+                <label class="col-sm-2 col-form-label"> Client </label>
+                <div class="col-sm-4">{{ form.client }}</div>
+
+            </div>
+
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Antecedent</label>
+                <div class="col-sm-4">{{ form.anticedent }}</div>
+
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Behaviour</label>
+                <div class="col-sm-4">{{ form.behaviour }}</div>
+
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Consequence</label>
+                <div class="col-sm-4">{{ form.consequence }}</div>
+
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Intensity</label>
+                <div class="col-sm-4">{{ form.intensity }}</div>
+
+            </div>
+
+
+            <button type="submit" class="btn btn-primary">Save</button>
+            <a class="btn btn-primary" href="{% url 'view' %}">History</a>
+
+        </form>
 
     </div>
-
-     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Antecedent</label>
-        <div class="col-sm-4">{{ form.anticedent }} </div>
-
-    </div>  <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Behaviour</label>
-        <div class="col-sm-4">{{ form.behaviour }} </div>
-
-    </div>  <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Consequence</label>
-        <div class="col-sm-4">{{ form.consequence }} </div>
-
-    </div>  <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Intensity</label>
-        <div class="col-sm-4">{{ form.intensity }} </div>
-
-    </div>
-
-
-        <button type="submit" class="btn btn-primary">Save</button>
-                   <a class="btn btn-primary" href="{% url 'view' %}">History</a>
-
-</form>
-
-        </div></div></div></div>
-  </main>
-    </div>
+    </div></div></div>
+</main>
+</div>
 
 {% endif %}
 
