--- a/PBSS/form_fba/templates/view.html
+++ b/PBSS/form_fba/templates/view.html
@@ -3,73 +3,76 @@
 {% block content %}
 {% load static %}
 
-  {% if user.is_authenticated %}
-  <main class="page-content">
+{% if user.is_authenticated %}
+<main class="page-content">
 
 
     <div class="container-fluid">
-       <h2 style="text-align: center;">Dashboard</h2>
+        <h2 style="text-align: center;">Dashboard</h2>
         <hr>
-      <div class="row">
-        <div class="form-group col-md-12">
-          <p style="text-align: center;">Manage work on daily basis.</p>
+        <div class="row">
+            <div class="form-group col-md-12">
+                <p style="text-align: center;">Manage work on daily basis.</p>
+            </div>
         </div>
-      </div>
 
-                   <div class="row heading">
-                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour Assessment</a></p>
-                            <h4>Functional Behaviour Assessment</h4>
-                        </div>
-                    </div>
+        <div class="row heading">
+            <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour
+                    Assessment</a></p>
+                <h4>Functional Behaviour Assessment</h4>
+            </div>
+        </div>
 
-               <form method="POST" class="post-form" action="/std/">
-    {% csrf_token %}
+        <form method="POST" class="post-form" action="/std/">
+            {% csrf_token %}
 
 
-        <br>
+            <br>
 
-        <div class="form-group row">
+            <div class="form-group row">
                 <div class="col-sm-12">
-        <p style="margin-bottom: 2%;">Your information has been added to the system.</p>
+                    <p style="margin-bottom: 2%;">Your information has been added to the system.</p>
                 </div>
-        </div>
+            </div>
 
-    <div class="form-group row">
-        <table class = "table table-striped table-bordered table-sm">
-    <thead class="thead-dark">
-    <br><br>
-    <tr>
-        <th>User</th>
-        <th>Antecedent</th>
-        <th>Behaviour</th>
-        <th>Consequence</th>
-        <th>Intensity</th>
-    </tr>
-    </thead>
-    {% for forms in form_fba %}
-    <tr>
-        <td>{{ forms.user }} </td>
-        <td>{{ forms.anticedent }} </td>
-        <td>{{ forms.behaviour }} </td>
-        <td>{{ forms.consequence }} </td>
-        <td>{{ forms.intensity }} </td>
-        <td>
-            <a href="/edit/{{ forms.id }}"> <span class="glyphicon glyphicon-pencil"></span> Edit </a></td>
-            <td><a href="/delete/{{ forms.id }}"> Delete </a>
+            <div class="form-group row">
+                <table class="table table-striped table-bordered table-sm">
+                    <thead class="thead-dark">
+                    <br><br>
+                    <tr>
+                        <th>User</th>
+                        <th>Antecedent</th>
+                        <th>Behaviour</th>
+                        <th>Consequence</th>
+                        <th>Intensity</th>
+                    </tr>
+                    </thead>
+                    {% for forms in form_fba %}
+                    <tr>
+                        <td>{{ forms.user }}</td>
+                        <td>{{ forms.anticedent }}</td>
+                        <td>{{ forms.behaviour }}</td>
+                        <td>{{ forms.consequence }}</td>
+                        <td>{{ forms.intensity }}</td>
+                        <td>
+                            <a href="/edit/{{ forms.id }}"> <span class="glyphicon glyphicon-pencil"></span> Edit </a>
+                        </td>
+                        <td><a href="/delete/{{ forms.id }}"> Delete </a>
 
-        </td>
-    </tr>
+                        </td>
+                    </tr>
 
-    {% endfor %}
+                    {% endfor %}
 
-    </table>
+                </table>
+            </div>
+        </form>
+
     </div>
-</form>
-
-        </div></div></div></div>
-  </main>
-    </div>
+    </div></div></div>
+</main>
+</div>
 
 {% endif %}
 
