--- a/PBSS/users/templates/users/edit_profile.html
+++ b/PBSS/users/templates/users/edit_profile.html
@@ -3,48 +3,53 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
- <!-- sidebar-wrapper  -->
-  <div class="page-content">
+<!-- sidebar-wrapper  -->
+<div class="page-content">
     <div class="container-fluid">
-       <h2 style="text-align: center;">Dashboard</h2>
+        <h2 style="text-align: center;">Dashboard</h2>
         <hr>
-      <div class="row">
-        <div class="form-group col-md-12">
-          <p style="text-align: center;">Manage work on daily basis.</p>
-        </div>
-      </div>
         <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-             <div class="container">
+            <div class="form-group col-md-12">
+                <p style="text-align: center;">Manage work on daily basis.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="{% url 'edit_profile' %}"> Edit Profile</a></p>
+                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a
+                                    href="{% url 'edit_profile' %}"> Edit Profile</a></p>
                             <h4>Edit Profile</h4>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-3 box-item">
-                            <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}" alt="accountpicture">
+                            <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}"
+                                 alt="accountpicture">
                         </div>
                         <div class="col-sm-8 box-item" style="text-align: left;">
-                           <form method="POST" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <fieldset class="form-group"><br>
-                            <legend class="border-bottom mb-4"> Profile Information</legend>
-                            {{ u_form|crispy }}
-                            {{ p_form|crispy }}
-                        </fieldset>
-                        <div class="form-group">
-                            <button class="btn btn-3 btn-block" type="submit" >Update</button>
-                        </div>
-                    </form>
-        <div class="border-top pr-3">
+                            <form method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <fieldset class="form-group"><br>
+                                    <legend class="border-bottom mb-4"> Profile Information</legend>
+                                    {{ u_form|crispy }}
+                                    {{ p_form|crispy }}
+                                </fieldset>
+                                <div class="form-group">
+                                    <button class="btn btn-3 btn-block" type="submit">Update</button>
+                                </div>
+                            </form>
+                            <div class="border-top pr-3">
 
-            </div></div></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
         </div>
-        </div>
-    </div></div></div>
-  </main>
+    </div>
+</div></div>
+</main>
 
 {% endblock content %}
