--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -3,78 +3,88 @@
 {% block content %}
 {% load static %}
 
-  <main class="page-content">
+<main class="page-content">
     <div class="container-fluid">
-       <h2 style="text-align: center;">Dashboard</h2>
+        <h2 style="text-align: center;">Dashboard</h2>
         <hr>
-      <div class="row">
-        <div class="form-group col-md-12">
-          <p style="text-align: center;">Manage work on daily basis.</p>
-        </div>
-      </div>
-         <div class="container">
-                    <div class="row heading">
-                        <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"
-                                                                                            href="{% url 'client-create' %}" style="float: right; margin-right: 4%;">
-              <span>Add New Client</span></a>
-                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-
-                          <!--  <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p> -->
-                            <h2 style="text-align: center;">Client Lists - ({{page_obj.paginator.count}})</h2>
-
-                    <br><br>
-        <div class="container">
-                {% for post in posts %}
-                <div class="container" style="-webkit-box-shadow: 0 10px 6px -6px #777;-moz-box-shadow: 0 10px 6px -6px #777;
-            box-shadow: 0 10px 6px -6px #777; margin-bottom: 3%; width: 48%; float: left;">
-                <h2><a class="article-title" style="color: black; font-size: 30px;" href="{% url 'profile' post.id %}">{{ post.client_name }}</a> </h2>
-                             <a class="mr-2" href="{% url 'user-client' post.author.username %}" style="line-height: 2; margin-top: 2%;">By {{post.author}}</a>
-                            <div class="intro" style="float: right; margin-top: 2%;"> on {{ post.date_issued }}</div><br>
-                            <div class="intro" style="line-height: 2; float: right;">Gender: {{post.gender}}</div>
-                            <div class="intro" style="line-height: 2;">Date Of Birth: {{post.DOB}}</div>
-                            <div class="intro" style="line-height: 2;">Email-id: {{post.email}}</div>
-                            <div class="intro" style="line-height: 2;">Location: {{post.location}}</div>
-
-                            <div class="intro" style="line-height: 2;">Comment: {{post.content}}</div>
-                    <div class="intro" style="line-height: 2; font-weight: bold;">History: {{post.history}}</div><br>
-                    <div class="intro" style="float: right; margin-left: 1%; "><a class="btn btn-2 btn-lg" type="submit" href="{% url 'profile' post.id %}">Update Information</a></div>
-                </div>
-
-                {% endfor %}
-        </div>
-                <br><br>
-                {% if is_paginated %}
-                    {% if page_obj.has_previous %}
-                    <a type="button" class="btn btn-2" href="?page=1">First</a>
-                    <a type="button" class="btn btn-2" href="?page={{ page_obj.previous_page_number}}">Previous</a>
-                    {% endif %}
-                    {% for num in page_obj.paginator.page_range %}
-                        {% if page_obj.number == num %}
-                 <a type="button" class="btn btn-2" href="?page={{ num }}">{{ num }}</a>
-                        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                 <a type="button" class="btn btn-2" href="?page={{ num }}">{{ num }}</a>
-                        {% endif %}
-                 {% endfor %}
-
-                 {% if page_obj.has_next %}
-                    <a type="button" class="btn btn-2" href="?page={{ page_obj.next_page_number }}">Next</a>
-                    <a type="button" class="btn btn-2" href="?page={{ page_obj.paginator.num_pages}}">Last</a>
-                 {% endif %}
-
-                {% endif %}
-        </div>
         <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="form-group col-md-12">
+                <p style="text-align: center;">Manage work on daily basis.</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row heading">
+                <div class="intro" style="float: right; margin-bottom: 0%;"><a class="btn btn-3 btn-lg" type="submit"
+                                                                               href="{% url 'client-create' %}"
+                                                                               style="float: right; margin-right: 4%;">
+                    <span>Add New Client</span></a>
+                    <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
 
-        </div>
-        </div>
-        </div>
+                        <!--  <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p> -->
+                        <h2 style="text-align: center;">Client Lists - ({{page_obj.paginator.count}})</h2>
+
+                        <br><br>
+                        <div class="container">
+                            {% for post in posts %}
+                            <div class="container" style="-webkit-box-shadow: 0 10px 6px -6px #777;-moz-box-shadow: 0 10px 6px -6px #777;
+            box-shadow: 0 10px 6px -6px #777; margin-bottom: 3%; width: 48%; float: left;">
+                                <h2><a class="article-title" style="color: black; font-size: 30px;"
+                                       href="{% url 'profile' post.id %}">{{ post.client_name }}</a></h2>
+                                <a class="mr-2" href="{% url 'user-client' post.author.username %}"
+                                   style="line-height: 2; margin-top: 2%;">By {{post.author}}</a>
+                                <div class="intro" style="float: right; margin-top: 2%;"> on {{ post.date_issued }}
+                                </div>
+                                <br>
+                                <div class="intro" style="line-height: 2; float: right;">Gender: {{post.gender}}</div>
+                                <div class="intro" style="line-height: 2;">Date Of Birth: {{post.DOB}}</div>
+                                <div class="intro" style="line-height: 2;">Email-id: {{post.email}}</div>
+                                <div class="intro" style="line-height: 2;">Location: {{post.location}}</div>
+
+                                <div class="intro" style="line-height: 2;">Comment: {{post.content}}</div>
+                                <div class="intro" style="line-height: 2; font-weight: bold;">History:
+                                    {{post.history}}
+                                </div>
+                                <br>
+                                <div class="intro" style="float: right; margin-left: 1%; "><a class="btn btn-2 btn-lg"
+                                                                                              type="submit"
+                                                                                              href="{% url 'profile' post.id %}">Update
+                                    Information</a></div>
+                            </div>
+
+                            {% endfor %}
+                        </div>
+                        <br><br>
+                        {% if is_paginated %}
+                        {% if page_obj.has_previous %}
+                        <a type="button" class="btn btn-2" href="?page=1">First</a>
+                        <a type="button" class="btn btn-2" href="?page={{ page_obj.previous_page_number}}">Previous</a>
+                        {% endif %}
+                        {% for num in page_obj.paginator.page_range %}
+                        {% if page_obj.number == num %}
+                        <a type="button" class="btn btn-2" href="?page={{ num }}">{{ num }}</a>
+                        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                        <a type="button" class="btn btn-2" href="?page={{ num }}">{{ num }}</a>
+                        {% endif %}
+                        {% endfor %}
+
+                        {% if page_obj.has_next %}
+                        <a type="button" class="btn btn-2" href="?page={{ page_obj.next_page_number }}">Next</a>
+                        <a type="button" class="btn btn-2" href="?page={{ page_obj.paginator.num_pages}}">Last</a>
+                        {% endif %}
+
+                        {% endif %}
                     </div>
-         </div>
-      </div>
-  </main>
-    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+</div>
 
 
 {% endblock content %}
