--- a/PBSS/users/templates/users/user_client.html
+++ b/PBSS/users/templates/users/user_client.html
@@ -4,106 +4,105 @@
 {% load crispy_forms_tags %}
 
 <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-					<li>
-                        <a class="page-scroll" href="{% url 'index' %}">Home</a>
-                    </li>
-                    <li>
-                         {% if user.is_authenticated %}
-                     <li>
-                                 <a class="page-scroll" href="{% url 'client-create' %}">New Client</a>
-                             </li>
-                             <li>
-                                 <a class="page-scroll" href="{% url 'profile' %}">Profile</a>
-                             </li>
-                             <li>
-                                 <a class="page-scroll" href="{% url 'logout' %}">Logout</a>
-                             </li>
-                     </li>
-                             <li>
-
-                         {% else %}
-                            <a class="page-scroll" href="#portal">Signup</a>
-                        </li>
-                         {% endif %}
-
-                        <li>
-                            <a class="page-scroll" href="{% url 'contact' %}">Contact us</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
         </div>
-        <!-- /.container-fluid -->
-    </nav>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="hidden">
+                    <a href="#page-top"></a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="{% url 'index' %}">Home</a>
+                </li>
+                <li>
+                    {% if user.is_authenticated %}
+                <li>
+                    <a class="page-scroll" href="{% url 'client-create' %}">New Client</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="{% url 'profile' %}">Profile</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="{% url 'logout' %}">Logout</a>
+                </li>
+                </li>
+                <li>
+
+                    {% else %}
+                    <a class="page-scroll" href="#portal">Signup</a>
+                </li>
+                {% endif %}
+
+                <li>
+                    <a class="page-scroll" href="{% url 'contact' %}">Contact us</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
 
 
-     <div id="page-content" class="index-page">
-            <section id="" class="box-content box-1" style="background: white; margin-top: 3%;">
-                <div class="container">
-                    <div class="row heading">
-                        <div class="col-lg-12">
-                            <h2>Client Details</h2>
-                            <hr>
-                            <div class="intro">Be a part of positive behaviour support.</div>
+<div id="page-content" class="index-page">
+    <section id="" class="box-content box-1" style="background: white; margin-top: 3%;">
+        <div class="container">
+            <div class="row heading">
+                <div class="col-lg-12">
+                    <h2>Client Details</h2>
+                    <hr>
+                    <div class="intro">Be a part of positive behaviour support.</div>
 
-                        </div>
-                    </div>
+                </div>
+            </div>
             <div class="container">
 
                 <h1 class="mb-3">Clients by {{ view.kwargs.username }} ({{ page_obj.paginator.count}})</h1>
                 {% for post in posts %}
 
 
-                <h2><a class="article-title" href="{% url 'client-detail' post.id %}">{{ post.client_name }}</a> </h2>
-                             <div class="article-metadata">
-                                 <a class="mr-2" href="{% url 'user-client' post.author.username %}">By {{post.author}}</a><p> on {{ post.date_issued }}</p>
-                                 </div>
-                            <p>{{post.email}}</p>
-                            <p>{{post.content}}</p>
-
-
+                <h2><a class="article-title" href="{% url 'client-detail' post.id %}">{{ post.client_name }}</a></h2>
+                <div class="article-metadata">
+                    <a class="mr-2" href="{% url 'user-client' post.author.username %}">By {{post.author}}</a>
+                    <p> on {{ post.date_issued }}</p>
+                </div>
+                <p>{{post.email}}</p>
+                <p>{{post.content}}</p>
                 {% endfor %}
- <br><br>
+                <br><br>
                 {% if is_paginated %}
-                    {% if page_obj.has_previous %}
-                    <a type="button" class="btn btn-info" href="?page=1">First</a>
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.previous_page_number}}">Previous</a>
-                    {% endif %}
-                    {% for num in page_obj.paginator.page_range %}
-                        {% if page_obj.number == num %}
-                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
-                        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
-                        {% endif %}
-                 {% endfor %}
-
-                 {% if page_obj.has_next %}
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.next_page_number }}">Next</a>
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.paginator.num_pages}}">Last</a>
-                 {% endif %}
+                {% if page_obj.has_previous %}
+                <a type="button" class="btn btn-info" href="?page=1">First</a>
+                <a type="button" class="btn btn-info" href="?page={{ page_obj.previous_page_number}}">Previous</a>
+                {% endif %}
+                {% for num in page_obj.paginator.page_range %}
+                {% if page_obj.number == num %}
+                <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
+                {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
+                {% endif %}
+                {% endfor %}
+                {% if page_obj.has_next %}
+                <a type="button" class="btn btn-info" href="?page={{ page_obj.next_page_number }}">Next</a>
+                <a type="button" class="btn btn-info" href="?page={{ page_obj.paginator.num_pages}}">Last</a>
+                {% endif %}
                 {% endif %}
 
-                        </div>
-                </div>
-            </section>
-     </div>
+            </div>
+        </div>
+    </section>
+</div>
 
 {% endblock content %}
