--- a/PBSS/form_fba/templates/fbaindex.html
+++ b/PBSS/form_fba/templates/fbaindex.html
@@ -77,8 +77,8 @@
                 {% endfor %}
             {% endif %}
 
-            <button type="submit" class="btn btn-primary">Save</button>
-            <a class="btn btn-primary" href="{% url 'view' %}">History</a>
+            <button type="submit" class="btn btn-2 btn-lg">Save</button>
+            <a class="btn btn-2 btn-lg" href="{% url 'view' %}">History</a>
 
         </form>
 
