--- a/PBSS/form_fba/templates/fbaindex.html
+++ b/PBSS/form_fba/templates/fbaindex.html
@@ -16,7 +16,10 @@
         </div>
 
         <div class="row heading">
+              <a href="{% url 'client' %}"><i class="fa fa-arrow-circle-left" style="font-size:40px; border: none; float: left; color: blue;"></i></a>
+
             <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+
                 <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour
                     Assessment</a></p>
                 <h4>Functional Behaviour Assessment</h4>
