br models getting generated and veiwing to test display option
Co-Authored-By: Shankar Ravindran <shankar6892@users.noreply.github.com>

--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -105,7 +105,7 @@
                         </a>
                     </li>
                     <!--            <li class="sidebar-dropdown">-->
-                    <!--            <a href="{% url 'brreport' %}" >-->
+                    <!--            <a href="" >-->
                     <!--              <span>BR Report (final)</span>-->
                     <!--            </a>-->
                     <!--          </li>-->
