error resolved. (reverse order not found for br)

--- a/PBSS/form_fba/templates/brview.html
+++ b/PBSS/form_fba/templates/brview.html
@@ -18,7 +18,7 @@
 
         <div class="row heading">
             <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> BR Report</a></p>
+                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> BR History</a></p>
                 <h4>BR Report</h4>
             </div>
         </div>
