--- a/PBSS/users/templates/users/post_detail.html
+++ b/PBSS/users/templates/users/post_detail.html
@@ -30,7 +30,7 @@
             box-shadow: 0 10px 6px -6px #777; margin-bottom: 3%; width: 100%; float: left;">
 
                             <div class="intro" style="float: right;"><a class="btn btn-2 btn-lg" type="submit"
-                                                                        href="{% url 'brreport' %}"> BR Report </a>
+                                                                        href="{% url 'std1' %}"> BR Report </a>
                             </div>
                             <div class="intro" style="float: right; margin-right: 1%; "><a class="btn btn-2 btn-lg"
                                                                                            type="submit"
