converted to class
functinal view converted to class view to using the same template for sorting.

--- a/PBSS/form_fba/templates/view.html
+++ b/PBSS/form_fba/templates/view.html
@@ -46,6 +46,8 @@
         <th>Behaviour</th>
         <th>Consequence</th>
         <th>Intensity</th>
+        <th>Date&Time</th>
+
     </tr>
     </thead>
     {% for forms in form_fba %}
@@ -55,6 +57,7 @@
         <td>{{ forms.behaviour }} </td>
         <td>{{ forms.consequence }} </td>
         <td>{{ forms.intensity }} </td>
+        <td>{{ forms.date_created|date:"F d, Y"}}</td>
         <td>
             <a href="/edit/{{ forms.id }}"> <span class="glyphicon glyphicon-pencil"></span> Edit </a></td>
             <td><a href="/delete/{{ forms.id }}"> Delete </a>
