charts showing data with id and intensity.
i will put links and everything by night

--- a/PBSS/form_fba/templates/brview.html
+++ b/PBSS/form_fba/templates/brview.html
@@ -45,7 +45,7 @@
         <th>Intensity 3</th>
         <th>Intensity 4</th>
         <th>Intensity 5</th>
-        <th>Sum</th>
+<!--        <th>Sum</th>-->
     </tr>
     </thead>
     {% for forms in form_br %}
