--- a/PBSS/form_fba/templates/brreport.html
+++ b/PBSS/form_fba/templates/brreport.html
@@ -25,7 +25,7 @@
              <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> BR Report</a></p>
+<!--                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> BR Report</a></p>-->
                            <h4 style=" text-transform: capitalize; ">Please fill in the survey related to client to calculate the improvement in past few days.</h4>
                         </div>
                    </div>
