--- a/PBSS/form_fba/templates/charts.html
+++ b/PBSS/form_fba/templates/charts.html
@@ -785,7 +785,7 @@
         <div class="row">
             <div class="form-group col-md-12">
                 <p style="text-align: center;">Data Visualization</p>
-                <a href="{% url 'client' %}"><i class="fa fa-arrow-circle-left"
+                <a href="{% url 'view1' %}"><i class="fa fa-arrow-circle-left"
                                                 style="font-size:40px; border: none; float: left; color: blue;"></i></a>
             </div>
         </div>
