--- a/PBSS/positivebehaviour/static/css/style.css
+++ b/PBSS/positivebehaviour/static/css/style.css
@@ -1100,3 +1100,13 @@ input{
 #id_client{
     padding: 3%;
 }
+
+.page-content {
+    background-color:
+    #F8F8FF;
+}
+
+body {
+    background-color:
+    #F8F8FF;
+}
