--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -94,11 +94,11 @@
                             <span>Add Support Worker</span>
                         </a>
                     </li>
-                    <li class="sidebar-dropdown">
-                        <a href="{% url 'chart' %}">
-                            <span>Charts (will be removed)</span>
-                        </a>
-                    </li>
+<!--                    <li class="sidebar-dropdown">-->
+<!--                        <a href="{% url 'chart' %}">-->
+<!--                            <span>Charts (will be removed)</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
                     <li class="sidebar-dropdown">
                         <a href="{% url 'supportworker' %}">
                             <span>Support Workers list</span>
