--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -47,8 +47,7 @@
                                 <br>
                                 <div class="intro" style="float: right; margin-left: 1%; "><a class="btn btn-2 btn-lg"
                                                                                               type="submit"
-                                                                                              href="{% url 'profile' post.id %}">Update
-                                    Information</a></div>
+                                                                                              href="{% url 'profile' post.id %}">Account Settings</a></div>
                             </div>
 
                             {% endfor %}
