--- a/PBSS/form_fba/templates/edit.html
+++ b/PBSS/form_fba/templates/edit.html
@@ -14,8 +14,8 @@
         </div>
         <div class="row heading">
             <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour
-                    Assessment</a></p>
+<!--                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour-->
+<!--                    Assessment</a></p>-->
                 <h4>Functional Behaviour Assessment</h4>
             </div>
         </div>
