--- a/PBSS/form_fba/templates/view.html
+++ b/PBSS/form_fba/templates/view.html
@@ -18,8 +18,8 @@
 
         <div class="row heading">
             <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour
-                    Assessment</a></p>
+<!--                <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="#"> Functional Behaviour-->
+<!--                    Assessment</a></p>-->
                 <h4>Functional Behaviour Assessment</h4>
             </div>
         </div>
@@ -40,7 +40,7 @@
         <table class = "table table-striped table-bordered table-sm">
     <thead class="thead-dark">
     <br><br>
-    <tr>
+    <tr style="font-weight: bold;">
 
         <th>Antecedent</th>
         <th>Behaviour</th>
