--- a/PBSS/users/templates/users/logout.html
+++ b/PBSS/users/templates/users/logout.html
@@ -6,7 +6,7 @@
 {% load static %}
 
     <div id="page-content" class="index-page">
-            <section id="" class="box-content box-1" style="background: white;">
+            <section id="" class="box-content box-1" style="background-color: #F8F8FF;">
                 <div class="container">
                      <div class="row heading" style="margin-top: 15%;">
                         <div class="col-lg-12">
