--- a/PBSS/form_fba/templates/view.html
+++ b/PBSS/form_fba/templates/view.html
@@ -46,6 +46,7 @@
         <th>Behaviour</th>
         <th>Consequence</th>
         <th>Intensity</th>
+        <th>Client</th>
 
     </tr>
     </thead>
@@ -56,6 +57,7 @@
         <td>{{ forms.behaviour }} </td>
         <td>{{ forms.consequence }} </td>
         <td>{{ forms.intensity }} </td>
+         <td><a href="{% url 'DetailView' forms.id %}">{{ forms.client}}</a></td>
         <td>
             <a href="/edit/{{ forms.id }}"> <span class="glyphicon glyphicon-pencil"></span> Edit </a></td>
             <td><a href="/delete/{{ forms.id }}"> Delete </a>
